# tge-price-forecasting

./: .gitignore  README.md  pyproject.toml
configs/: data.yaml  features.yaml
scripts/: build_features.py  download_data.py  visualize_data.py
src/tge_forecast/: __init__.py  config.py
src/tge_forecast/data/: __init__.py  clean.py  cli.py  dataset.py  fetch_pse.py  fetch_tge.py  fetch_weather.py  pipeline.py  visualize.py  viz_cli.py
src/tge_forecast/features/: __init__.py  cli.py  engineering.py  pipeline.py  splits.py
