[tool.poetry]
name = "tge-forecast"
version = "0.1.0"
description = "Day-ahead (RDN) electricity price forecasting for TGE — Data Science + MLOps"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "tge_forecast", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
pyarrow = "^18.0"
numpy = "^2.0"
requests = "^2.32"
beautifulsoup4 = "^4.12"
lxml = "^5.3"
pyyaml = "^6.0"
tqdm = "^4.66"
python-dateutil = "^2.9"
typer = "^0.15"
rich = "^13.9"
matplotlib = "^3.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9"
black = "^25.1"
mypy = "^1.14"
types-requests = "^2.32"
types-PyYAML = "^6.0"
types-python-dateutil = "^2.9"

# Added in later steps:
# [tool.poetry.group.ml.dependencies]
# torch, lightning, scikit-learn, mlflow, polars, ...

[tool.poetry.scripts]
download-data = "tge_forecast.data.cli:app"
visualize-data = "tge_forecast.data.viz_cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["tge_forecast"]
